# visual_auo

./: .gitignore  README.md
src/4.with_ICP/: obj_01.ply  pcicp_class.py  showimage.py
src/4.with_ICP/datasets/: dataset.py  dataset_Class.py
src/4.with_ICP/model_results/: model_best_auo.pth
src/Azure_Kinect_ROS_Driver/launch/: driver.launch  kinect_rgbd.launch
src/apriltags_ros/apriltags_ros/launch/: cali_0329.launch  realsense_d435.launch  tag_surgery.launch
src/camera_calibrate/: self_camera_info.py
src/easy_handeye/easy_handeye/launch/: calibrate.launch  hiwin_realsense_calibration.launch  rviz_easy_handeye.config
src/tm/my_msg_pkg/: CMakeLists.txt  package.xml
src/tm/my_msg_pkg/msg/: pose_estimation_data.msg
src/tm/robotiq/robotiq_controller/: CMakeLists.txt  package.xml
src/tm/robotiq/robotiq_controller/src/: simpleCtrl.cpp
src/tm/robotiq/robotiq_modbus_rtu/src/robotiq_modbus_rtu/: comModbusRtu.py
src/vs_demo/: CMakeLists.txt  package.xml
src/vs_demo/src/: control_final.cpp
